--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --watch",
-    "build": "rimraf dist && webpack --mode production",    
+    "build": "rimraf dist && webpack --mode production",
     "deploy": "gh-pages -d dist"
   },
   "author": "Shvanyk Dmitriy",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "core-js": "^3.1.4"
+    "core-js": "^3.1.4",
+    "serialize-javascript": "^2.1.1"
   }
 }
